# aws-highspot-mcp

./: .mcp.json  README.md  main.py  pyproject.toml
amzn_req/: __init__.py
highspot_mcp/: __init__.py
